# Multi-Agent-System

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  pyproject.toml  run_full_system.ps1
.github/workflows/: ci.yml
config/: defaults.yaml  dev.yaml  schema_versions.yaml  test.yaml
docs/: IMPLEMENTATION_PLAN_FINAL (2).md
docs/ADR/: 001-split-graph.md
infra/docker/: Dockerfile.api  Dockerfile.rust-builder  Dockerfile.worker
migrations/pg/: alembic.ini  env.py
rust/: Cargo.toml
rust/py-bindings/: Cargo.toml
rust/py-bindings/src/: lib.rs
rust/reasoning-graph/: Cargo.toml
rust/reasoning-graph/src/: attention.rs  checkpoint.rs  delta.rs  edge.rs  fork.rs  graph.rs  lib.rs  node.rs  temporal_index.rs
rust/wl-hash/: Cargo.toml
rust/wl-hash/src/: lib.rs  (+1 more)
scripts/: benchmark.py  compact.py  migrate.py  seed_laws.py
src/: __init__.py
src/analyzers/: __init__.py  harness.py
src/api/: __init__.py  app.py  auth.py
src/causal/: __init__.py  builder.py  cbn.py  discriminator.py  intervention.py
src/certificate/: __init__.py  generator.py  verifier.py
src/cli/: main.py
src/coordination/: __init__.py  arbitration.py  bidding.py  blackboard.py  bus.py  execution_policy.py  multitenancy.py  orchestrator.py  reliability.py
src/core/: __init__.py  certificate.py  config.py  contract.py  coordination.py  counterfactual.py  derived.py  fact.py  runtime_event.py
src/cost_aware/: __init__.py  cost_tracker.py  value_estimator.py
src/counterfactual/: __init__.py  boundary.py  engine.py  replay.py
src/dfe/: __init__.py  attention.py  compiler.py  derived_store.py  rete.py
src/executor/: __init__.py  agent.py
src/hypothesis/: __init__.py  aggregator.py  hypothesis.py  strategies.py
src/hypothesis_engine/: __init__.py  aggregator.py  base.py  generator.py  template_matcher.py
src/iie/: __init__.py  architecture_ir.py  engine.py  runtime_monitor.py
src/ingestion/: __init__.py  api_submission.py  cloud_poller.py  file_watcher.py  git_ingestion.py  pipeline.py  stream_consumer.py  webhook_receiver.py
src/law_engine/: __init__.py  evaluator.py  governance.py  law.py  library.py
src/memory/: __init__.py  abstraction.py  agent.py  causal_template.py  consolidation.py  fingerprint.py  memoization.py  retrieval.py  storage.py  types.py
src/observability/: __init__.py  logging.py  metrics.py
src/osg/: __init__.py  failure_propagation.py  materializer.py  temporal_order.py
src/policy/: __init__.py  engine.py  opa.py  yaml_rules.py
src/repair/: __init__.py  discriminator.py  planner.py  scoring.py  verification.py
src/runtime/: __init__.py  chat.py  service.py
src/scoring/: __init__.py  energy.py
src/self_improving/: __init__.py  attention_regressor.py  law_weight_updater.py  outcome_tracker.py  strategy_prior_updater.py
src/solver/: __init__.py  budget.py  fallback.py  layer.py  translator.py
src/state_graph/: __init__.py  delta_entities.py  delta_log.py  delta_materializer.py  index_maintainer.py  precomputed_indexes.py  query_graph.py  reasoning_graph.py  schema.py  semantic_cache.py  temporal_index.py  traversal_cache.py
src/tms/: __init__.py  belief.py  confidence.py  engine.py  index.py
tests/: conftest.py
tests/chaos/: test_chaos.py  test_chaos_gate.py
(+143 files in other folders)
